# journal_CPlusPlus_exercise

./: .gitignore  CMakeLists.txt  JournalApp.cpp  JournalApp.h  JournalAppUI.fbp  JournalFrame.cpp  JournalFrame.h  JournalPanel.cpp  JournalPanel.h  JournalPanels.cpp  JournalPanels.h  main.cpp  main.xrc
assets/: Main.xrc
src/: JournalApp.cpp  JournalFrame.cpp  JournalFrame.h  JournalPanels.cpp  JournalPanels.h
src/models/: JournalAppSettings.h  JournalEntryModel.h
src/services/: Database.cpp  Database.h  Settings.cpp  Settings.h
